@@ -401,71 +401,54 @@ plotting.clusterProfile <- function(clProf.reshape.df,
 
 ##' building GO mapping files
 ##'
-##' provided by a data.frame of gene and GO directly annotation file
+##' provided by a data.frame of GO (column 1) and gene (column 2) direct annotation
 ##' this function will building gene to GO and GO to gene mapping,
-##' with directly and undirectly annotation.
+##' with directly and undirectly (ancestor GO term) annotation.
 ##' @title buildGOmap
-##' @param gomap data.frame with two columns names "entrezgene", and "go_accession"
-##' @param compress logical, indicate file save in compress or not.
-##' @return files save in the the working directory
+##' @param gomap data.frame with two columns of GO and gene ID
+##' @return GO annotation
 ##' @importMethodsFrom AnnotationDbi mget
 ##' @importFrom GO.db GOMFANCESTOR
 ##' @importFrom GO.db GOBPANCESTOR
 ##' @importFrom GO.db GOCCANCESTOR
-##' @importFrom plyr dlply
 ##' @export
 ##' @author Yu Guangchuang
-buildGOmap <- function(gomap, compress=TRUE) {
-    if( any( colnames(gomap) %in% "go_id" ) ) {
-        colnames(gomap)[colnames(gomap) %in% "go_id"] <- "go_accession"
+buildGOmap <- function(gomap) {
+    if (!exists("Anno_clusterProfiler_Env", envir = .GlobalEnv)) {
+        assign("Anno_clusterProfiler_Env", new.env(), .GlobalEnv)
     }
+    Anno_clusterProfiler_Env <- get("Anno_clusterProfiler_Env", envir= .GlobalEnv)
 
     ## remove empty GO annotation
-    gomap <- gomap[gomap$go_accession != "", ]
+    gomap <- gomap[gomap[,1] != "", ]
 
+    GO2EG <- split(as.character(gomap[,2]), as.character(gomap[,1]))
+    EG2GO <- split(as.character(gomap[,1]), as.character(gomap[,2]))
 
-    GO2EG <- dlply(gomap,"go_accession",.fun=function(i) as.character(i$entrezgene))
-    EG2GO <- dlply(gomap,"entrezgene",.fun=function(i) as.character(i$go_accession))
-
-    if (compress) {
-      save(GO2EG, file="GO2EG.rda", compress="xz")
-      save(EG2GO, file="EG2GO.rda", compress="xz")
-    } else {
-      save(GO2EG, file="GO2EG.rda")
-      save(EG2GO, file="EG2GO.rda")
-
-    }
-
-
+    save(GO2EG, file="GO2EG.rda")
+    save(EG2GO, file="EG2GO.rda")
+    
     EG2ALLGO <- lapply(EG2GO,
-                        function(i) {
-                            mfans <- unlist(mget(i, GOMFANCESTOR, ifnotfound=NA))
-                            bpans <- unlist(mget(i, GOBPANCESTOR, ifnotfound=NA))
-                            ccans <- unlist(mget(i, GOCCANCESTOR, ifnotfound=NA))
-                            ans <- c(mfans, bpans, ccans)
-                            ans <- ans[ !is.na(ans) ]
-                            ans <- c(i, ans)
-                            ans <- unique(ans)
-                            ans <- ans[ans != "all"]
-                            return(ans)
-                        })
-    if (compress) {
-      save(EG2ALLGO, file="EG2ALLGO.rda", compress="xz")
-    } else {
-      save(EG2ALLGO, file="EG2ALLGO.rda")
-    }
-
+                       function(i) {
+                           mfans <- unlist(mget(i, GOMFANCESTOR, ifnotfound=NA))
+                           bpans <- unlist(mget(i, GOBPANCESTOR, ifnotfound=NA))
+                           ccans <- unlist(mget(i, GOCCANCESTOR, ifnotfound=NA))
+                           ans <- c(mfans, bpans, ccans)
+                           ans <- ans[ !is.na(ans) ]
+                           ans <- c(i, ans)
+                           ans <- unique(ans)
+                           ans <- ans[ans != "all"]
+                           return(ans)
+                       })
+    save(EG2ALLGO, file="EG2ALLGO.rda")
+    
     len <- lapply(EG2ALLGO,length)
     EG2ALLGO.df <- data.frame(EG=rep(names(EG2ALLGO), times=len),
                               GO=unlist(EG2ALLGO))
     GO <- NULL ## satisfy code tools
     GO2ALLEG <- dlply(EG2ALLGO.df, .(GO), function(i) as.character(i$EG))
     GO2ALLEG <- lapply(GO2ALLEG, unique)
-    if (compress) {
-      save(GO2ALLEG, file="GO2ALLEG.rda", compress="xz")
-    } else {
-      save(GO2ALLEG, file="GO2ALLEG.rda")
-    }
+    save(GO2ALLEG, file="GO2ALLEG.rda")    
     print("GO Annotation Mapping files save in the working directory.")
 }
 
